[package]
name = "kluars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.5", features = ["derive"] }
env_logger = "0.10.0"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.86.0", features = ["client"]}
log = "0.4.20"
mlua = { version = "0.9.1", features = ["serialize", "luajit"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.12"
